--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,6 @@
 # Dependencies
 node_modules/
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
-.yarn/cache/
-.yarn/install-state.gz
-.pnp.*
+package-lock.json
 
 # Claude Code
 .claude/
@@ -71,8 +63,6 @@ coverage/
 # Logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # Temporary files
 *.tmp
