--- a/package.json
+++ b/package.json
@@ -17,35 +17,35 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.3",
-    "react-native-web": "^0.21.2"
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "react-native": "0.82.0",
+    "react-native-web": "0.21.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "15.0.1",
-    "@react-native-community/cli-platform-android": "15.0.1",
-    "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.76.3",
-    "@react-native/eslint-config": "0.76.3",
-    "@react-native/metro-config": "0.76.3",
-    "@react-native/typescript-config": "0.76.3",
-    "@tauri-apps/cli": "latest",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "@vitejs/plugin-react": "^5.1.2",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
+    "@babel/core": "7.28.5",
+    "@babel/preset-env": "7.28.5",
+    "@babel/runtime": "7.28.4",
+    "@react-native-community/cli": "18.0.0",
+    "@react-native-community/cli-platform-android": "18.0.0",
+    "@react-native-community/cli-platform-ios": "18.0.0",
+    "@react-native/babel-preset": "0.82.0",
+    "@react-native/eslint-config": "0.82.0",
+    "@react-native/metro-config": "0.82.0",
+    "@react-native/typescript-config": "0.82.0",
+    "@tauri-apps/cli": "2.9.6",
+    "@types/react": "19.2.7",
+    "@types/react-test-renderer": "19.1.0",
+    "@vitejs/plugin-react": "5.1.2",
+    "babel-jest": "29.7.0",
+    "eslint": "8.57.1",
+    "jest": "29.7.0",
     "prettier": "2.8.8",
-    "react-test-renderer": "18.3.1",
+    "react-test-renderer": "19.1.1",
     "typescript": "5.0.4",
-    "vite": "^7.2.7"
+    "vite": "7.3.0"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=22"
   }
 }
